--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,36 @@
-apturl==0.5.2
-asgiref==3.5.0
-bcrypt==3.2.0
-blinker==1.4
-Brlapi==0.8.3
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
 Django==3.2.12
-duplicity==0.8.21
-fasteners==0.14.1
-future==0.18.2
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
-isodate==0.6.1
-jeepney==0.7.1
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-MarkupSafe==2.0.1
-monotonic==1.6
-more-itertools==8.10.0
-netifaces==0.11.0
-oauthlib==3.2.0
-olefile==0.46
-paramiko==2.9.3
-pexpect==4.8.0
-Pillow==9.0.1
-protobuf==3.12.4
-ptyprocess==0.7.0
-pycairo==1.20.1
-pycups==2.0.1
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-python-apt==2.4.0+ubuntu2
+appdirs==1.4.4
+asgiref==3.2.10
+beautifulsoup4==4.8.2
+boto==2.49.0
+boto3==1.13.18
+botocore==1.16.18
+certifi==2020.6.20
+chardet==3.0.4
+comtypes==1.1.7
+distlib==0.3.0
+dj-database-url==0.5.0
+django-embed-video==1.3.3
+django-heroku==0.3.1
+django-instagram==0.3.2
+django-storages==1.9.1
+docutils==0.15.2
+gunicorn==20.0.4
+idna==2.10
+jmespath==0.10.0
+lxml==4.5.2
+mysqlclient==1.4.6
+Pillow==7.0.0
+psycopg2==2.8.5
 python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-reportlab==3.6.8
+pytz==2020.1
+requests==2.24.0
+s3transfer==0.3.3
+six==1.15.0
+sorl-thumbnail==12.6.3
+soupsieve==2.0.1
+sqlparse==0.3.1
+urllib3==1.25.10
+whitenoise==5.0.1
+isodate==0.6.1
 requests==2.25.1
-SecretStorage==3.3.1
-six==1.16.0
-sqlparse==0.4.2
-systemd-python==234
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-usb-creator==0.3.7
-wadllib==1.3.6
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
